# neurograph-os-mvp

./: .config.sh  .dockerignore  .env  .env.example  .env.local.example  .gitignore  CHANGELOG.md  CHANGELOG_v0.31.3.md  CHANGELOG_v0.49.0.md  CHANGELOG_v0.58.0.md  CHANGELOG_v0.61.0.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  FIXES_V0.12.0.md  GITHUB_SETUP.md  GIT_COMMIT_SUMMARY.md  GIT_SYNC_INSTRUCTIONS.md  GRAPH_V2_RUST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MVP_FINAL.md  Makefile  PROJECT_HISTORY.md  Project_history.md  QUICKSTART.md  README.md  README_MVP.md  ROADMAP.md  SETUP_GUIDE.md  TOKEN_V2_RUST.md  V0.12.0_RELEASE_NOTES.md  V0.13.0_RELEASE_NOTES.md  alembic.ini  architecture_blueprint.json  benchmark_full_system.py  benchmark_stress_extreme_v0.52.0.json  (+32 more)
.claude/: settings.local.json
.github/: CLA_INSTRUCTIONS.md
benchmarks/: README.md  websocket_benchmark.py  websocket_stress_benchmark.py
client-libraries/: README.md
config/: README.md  event_bus.yaml  event_bus_ru.yaml  project.env  python.env  rust.env  versions.env
docker/: README.md  docker-compose.yml
docs/: API_REFERENCE.md  API_STATUS_v0.39.1.md  ARCHITECTURE_OVERVIEW.md  BENCHMARK_RESULTS_v0.52.0.md  CDNA V2.1.md  CDNA V2.md  CDNA_DASHBOARD.md  CONCEPT.md  CONFIGURATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  COORDINATE_PRECISION.md  Connection V2.md  Connection_V3_Benchmarks.md  Connection_V3_Benchmarks_v0.30.1.md  Connection_V3_Usage_Examples.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DOCKER.md  DOCS_CLEANUP_PLAN.md  FFI_INTEGRATION.md  GIT_GUIDE.md  Graph V2.0.md  Grid V2.0.md  Guardian V1.md  INDEX.md  INTEGRATION_GUIDE.md  IntuitionEngine_V3_Benchmarks_v0.31.2.md  MASTER_PLAN.md  MASTER_PLAN_v2.1.md  MASTER_PLAN_v3.0.md  PERFORMANCE_BASELINE_v0.27.0.md  PHASE1_COMPLETE.md  PROJECT_STRUCTURE.md  QA_SESSION_1.md  QUICKSTART.md  README.md  SCRIPTS.md  SETUP_GUIDE.md  Token V2.md  (+11 more)
examples/: WEBSOCKET_EXAMPLES.md  api_test_client.py  cli_demo.sh  event_integration_example.py  event_system_demo.py  event_usage_example.py  gateway_v2_demo.py  persistence_usage.py  runtime_storage_example.py  signal_system_basic.py  (+9 more)
python-client/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
python-client/examples/: advanced_features.py  async_usage.py  basic_usage.py
python-client/neurograph/: __init__.py  async_client.py  auth.py  cli.py  client.py  exceptions.py  logging.py  models.py  retry.py  testing.py
python-client/tests/: test_async_client.py  test_client.py  test_mock_client.py
src/core_rust/: .env.example  Cargo.toml  INSTALL.md  PERSISTENCE_SETUP.md  README.md  action_controller_config.json  run_benchmarks.sh  schema.sql  setup.py  setup_and_test.sh  setup_coverage.sh  setup_profiling.sh
src/core_rust/benches/: connection_v3_bench.rs  experience_stream_bench.rs  graph_bench.rs  grid_bench.rs  intuition_bench.rs  intuition_bench_v2.2_old.rs  system_integration_bench.rs  token_1m_bench.rs  token_bench.rs
src/core_rust/docs/performance/stress_tests/: v0.45.0_1m_tokens.txt  v0.45.0_9.9m_tokens.txt
src/core_rust/examples/: benchmark.py  integration_demo.py  python_grid_usage.py  python_usage.py  test_black_box.rs  test_metrics.rs  test_tracing.rs
src/core_rust/python/: neurograph.py
src/core_rust/src/: action_controller.rs  action_executor.rs  action_types.rs  adna.rs  appraisers.rs  async_wal.rs  black_box.rs  bootstrap.rs  cdna.rs  connection.rs  connection_v3.rs  coordinates.rs  evolution_manager.rs  experience.rs  experience_stream.rs  graph.rs  grid.rs  guardian.rs  hybrid_learning.rs  intuition_engine.rs  lib.rs  logging_utils.rs  metrics.rs  module_id.rs  module_registry.rs  panic_handler.rs  policy.rs  reflex_layer.rs  runtime_storage.rs  token.rs  tracing_otel.rs  tracing_sampling.rs  wal.rs
src/core_rust/src/adapters/: console.rs  mod.rs
src/core_rust/src/api/: handlers.rs  mod.rs  models.rs  router.rs  state.rs  websocket.rs
src/core_rust/src/appraisers/: curiosity.rs  efficiency.rs  goal_directed.rs  homeostasis.rs  mod.rs
src/core_rust/src/archive/: experience_token.rs  mod.rs
src/core_rust/src/curiosity/: autonomous.rs  config.rs  exploration.rs  mod.rs  novelty.rs  surprise.rs  uncertainty.rs
src/core_rust/src/executors/: message_sender.rs  mod.rs  noop.rs  signal_executor.rs
src/core_rust/src/feedback/: mod.rs
src/core_rust/src/ffi/: cdna.rs  connection.rs  graph.rs  grid.rs  guardian.rs  mod.rs  token.rs
src/core_rust/src/gateway/: channels.rs  config.rs  mod.rs  normalizer.rs  signals.rs  stats.rs
src/core_rust/src/learner/: mod.rs
src/core_rust/src/persistence/: backend.rs  mod.rs  postgres.rs
src/core_rust/src/python/: intuition.rs  mod.rs  modules.rs  runtime.rs  signal_system.rs  token.rs
src/core_rust/src/signal_system/: event.rs  filter.rs  mod.rs  py_bindings.rs  registry.rs  result.rs  subscriber.rs  system.rs
src/core_rust/tests/: api_compatibility_test.rs  async_wal_performance_test.rs  mod.rs  observability_stress_test.rs  stress_test_1m_tokens.rs  stress_test_9_9m_tokens.rs  tracing_sampling_performance_test.rs
src/core_rust/tests/integration/: action_controller_e2e.rs  hybrid_learning_e2e.rs  intuition_v3_e2e.rs  learning_loop_e2e.rs  persistence_e2e.rs
src/desktop/: Cargo.toml  README.md
src/desktop/src/: app.rs  layout.rs  main.rs  metrics.rs  theme.rs
src/desktop/src/assets/: logo.txt
src/desktop/src/auth/: mod.rs
src/desktop/src/core/: mod.rs
src/desktop/src/workspaces/: mod.rs
src/desktop_ui/: Cargo.toml  README.md
src/desktop_ui/src/: main.rs
src/desktop_ui/src/components/: mod.rs
src/desktop_ui/src/core_bridge/: mod.rs
src/desktop_ui/src/screens/: auth.rs  chat.rs  dashboard.rs  mod.rs
src/desktop_ui/src/theme/: colors.rs  mod.rs  styles.rs
src/desktop_ui/src/utils/: mod.rs
src/python/: README.md  pyproject.toml
src/python/examples/: README.md  basic_usage.py  semantic_search.py
src/python/neurograph/: __init__.py  exceptions.py  query.py  runtime.py  runtime_storage.py  types.py
(+512 files in other folders)
