[package]
name = "neurograph-core"
version = "0.26.0"
edition = "2021"
authors = ["NeuroGraph OS Team"]
description = "Core Rust implementation of NeuroGraph OS: Token + Connection + Grid + Graph + Guardian/CDNA + ADNA v3.0 Policy Engine with Python FFI"

[dependencies]
# PyO3 for Python FFI bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Parking lot for efficient RwLock
parking_lot = "0.12"

# Tokio for async runtime
tokio = { version = "1.42", features = ["sync", "macros", "rt", "time"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Random number generation (for sampling strategies)
rand = "0.8"

# PostgreSQL async driver (optional, for persistence)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "json"], optional = true }

# For .env support in persistence
dotenv = { version = "0.15", optional = true }

[dev-dependencies]
# Testing dependencies
rand = "0.8"
tokio = { version = "1.42", features = ["rt", "macros", "time"] }

[lib]
name = "neurograph_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[features]
default = []
python = ["pyo3"]  # Enable Python bindings with --features python
demo-tokio = ["tokio/rt-multi-thread", "tokio/time"]
persistence = ["sqlx", "dotenv"]  # Enable PostgreSQL persistence with --features persistence

[[bin]]
name = "token-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "connection-demo"
path = "src/bin/connection-demo.rs"

[[bin]]
name = "grid-demo"
path = "src/bin/grid-demo.rs"

[[bin]]
name = "integration-demo"
path = "src/bin/integration-demo.rs"

[[bin]]
name = "graph-demo"
path = "src/bin/graph-demo.rs"

[[bin]]
name = "experience-stream-demo"
path = "src/bin/experience-stream-demo.rs"
required-features = ["demo-tokio"]

[[bin]]
name = "intuition-demo"
path = "src/bin/intuition-demo.rs"
required-features = ["demo-tokio"]

[[bin]]
name = "learning-loop-demo"
path = "src/bin/learning-loop-demo.rs"
required-features = ["demo-tokio"]

[[bin]]
name = "action-controller-demo"
path = "src/bin/action-controller-demo.rs"
required-features = ["demo-tokio"]

[[bin]]
name = "persistence-demo"
path = "src/bin/persistence-demo.rs"
required-features = ["demo-tokio", "persistence"]
