[package]
name = "neurograph-desktop"
version = "0.46.0"
edition = "2021"
authors = ["NeuroGraph Team"]
description = "NeuroGraph Desktop UI - Native desktop interface for cognitive architecture"

[dependencies]
# UI Framework
iced = { version = "0.13", features = ["tokio", "advanced"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = "0.4"

# Synchronization
parking_lot = "0.12"

# Core integration (relative path to neurograph-core)
neurograph-core = { path = "../core_rust" }

# Fonts (to embed in binary)
# Will add font embedding later

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
